<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.feesight_mobile.view.home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_asset"
        android:name="com.example.feesight_mobile.view.home.ui.assets.AssetFragment"
        android:label="@string/title_asset"
        tools:layout="@layout/fragment_asset" />

    <fragment
        android:id="@+id/navigation_invest"
        android:name="com.example.feesight_mobile.view.home.ui.invest.InvestFragment"
        android:label="@string/title_invest"
        tools:layout="@layout/fragment_asset" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.feesight_mobile.view.home.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>