<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".view.home.ui.more.MoreFragment">

    <ImageView
        android:id="@+id/settings_01"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="266dp"
        android:src="@drawable/settings_01"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/mail_05"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="266dp"
        android:src="@drawable/mail_05"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/log_out_04"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="305dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="266dp"
        android:src="@drawable/log_out_04"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/settings"
        android:layout_width="75dp"
        android:layout_height="27dp"
        android:layout_marginStart="178dp"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:text="@string/email"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="17sp"
        android:textAppearance="@style/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_05" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="75dp"
        android:layout_height="27dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:text="@string/settings"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAppearance="@style/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_01" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="75dp"
        android:layout_height="27dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:text="@string/logout"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAppearance="@style/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_out_04" />

</androidx.constraintlayout.widget.ConstraintLayout>