<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- ImageView1 -->
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:src="@drawable/box_disable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/expense" />

    <!-- ImageView2 -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:src="@drawable/income_box"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- TextView1 -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Expenses"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="@+id/imageView1"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintEnd_toEndOf="@+id/imageView1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- TextView2 -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Income"
        android:fontFamily="@font/poppins_medium"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- TextView Date -->
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="105dp" />

    <!-- TextInputLayout Date -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        app:startIconDrawable="@drawable/baseline_calendar_month_light"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TextView Value -->
    <TextView
        android:id="@+id/tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/dateEditTextLayout"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="105dp" />

    <!-- TextInputLayout Value -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/totalEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_value"
        app:startIconDrawable="@drawable/baseline_account_balance_wallet_24"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/totalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:digits="0123456789"
            android:hint="@string/insert_money" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- New ImageView above TextView Categorize -->

    <!-- TextView Categorize -->
    <TextView
        android:id="@+id/tv_categorize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categorize"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/totalEditTextLayout"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="105dp" />
    <ImageView
        android:id="@+id/iv_categorize_1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/categories_income"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorize"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="New Image" />

    <ImageView
        android:id="@+id/iv_salary"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:contentDescription="New Image"
        android:src="@drawable/salary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorize" />

    <TextView
        android:id="@+id/tv_categorize_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="Salary"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_categorize_1" />
    <ImageView
        android:id="@+id/iv_categorize_3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/categories_income"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorize"
        app:layout_constraintStart_toEndOf="@+id/iv_categorize_1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="New Image"/>

    <ImageView
        android:id="@+id/iv_bonus_money"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="28dp"
        android:contentDescription="New Image"
        android:src="@drawable/bonus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorize" />

    <TextView
        android:id="@+id/tv_categorize_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="8dp"
        android:text="Bonus"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_categorize_3" />

    <ImageView
        android:id="@+id/iv_categorize_4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/categories_income"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorize"
        app:layout_constraintStart_toEndOf="@+id/iv_categorize_3"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="New Image"/>

    <ImageView
        android:id="@+id/iv_business"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="28dp"
        android:contentDescription="New Image"
        android:src="@drawable/business"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorize" />

    <TextView
        android:id="@+id/tv_categorize_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="8dp"
        android:text="Business"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_categorize_4" />

    <ImageView
        android:id="@+id/iv_categorize_5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/categories_income"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorize"
        app:layout_constraintStart_toEndOf="@+id/iv_categorize_4"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="New Image"/>

    <ImageView
        android:id="@+id/iv_income_other"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="28dp"
        android:contentDescription="New Image"
        android:src="@drawable/others"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorize" />

    <TextView
        android:id="@+id/tv_categorize_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="313dp"
        android:layout_marginTop="8dp"
        android:text="Others"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_categorize_5" />



    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Note"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorize_1"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="105dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_note"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/insert_note"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="130dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="13sp"
        android:text="@string/add_income"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/noteEditTextLayout"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
